syntax = "proto3";

package ci.engine.pciexpress;
option java_package = "ru.yandex.ci.engine.pciexpress";

message PciExpressTaskData {
    string units = 1;
    string arc_server_url = 2;
}
